// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapContainer should render 1`] = `
<div
  className="c-map c-map--drawing-mode-none qa-map-container"
>
  <Connect(MapPreviewPanelContainer) />
  <ToggleFullscreen
    isFullscreen={false}
    onToggleFullscreen={[Function]}
  />
  <Connect(LeafletContainer)
    getLeafletInstance={[Function]}
  />
  <Connect(MapPanelContainer) />
</div>
`;

exports[`MapContainer should render 2`] = `
<div
  className="c-map c-map--drawing-mode-draw qa-map-container"
>
  <Connect(MapPreviewPanelContainer) />
  <ToggleFullscreen
    isFullscreen={false}
    onToggleFullscreen={[Function]}
  />
  <Connect(LeafletContainer)
    getLeafletInstance={[Function]}
  />
  <Connect(MapPanelContainer) />
</div>
`;
